[gd_scene load_steps=7 format=3 uid="uid://i1l1qf4hpj4q"]

[ext_resource type="Theme" uid="uid://2hgjbonddwlt" path="res://assets/ui/ui_theme/MinimalUI.tres" id="1_kgeay"]
[ext_resource type="Texture2D" uid="uid://b2gaaal8uimav" path="res://icon.svg" id="1_okyv1"]
[ext_resource type="Script" path="res://assets/ui/menu/menu.gd" id="2_uxccl"]
[ext_resource type="PackedScene" uid="uid://bt3y5jo7u0ald" path="res://assets/game/game.tscn" id="3_1m6nr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lofi"]
bg_color = Color(0.356863, 0.356863, 0.356863, 0.729412)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_q2mal"]
font_size = 30
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.831373)

[node name="Menu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kgeay")
texture = ExtResource("1_okyv1")
script = ExtResource("2_uxccl")
game_scene = ExtResource("3_1m6nr")

[node name="Menu" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 128

[node name="Background" type="Panel" parent="Menu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1lofi")

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Menu/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Крутой Шутер!!!
"
label_settings = SubResource("LabelSettings_q2mal")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="Control" parent="Menu/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Start" type="Button" parent="Menu/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Начать игру"

[node name="Settings" type="Button" parent="Menu/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Настройки"

[node name="Quit" type="Button" parent="Menu/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Выйти"

[node name="VozduhVPachkeChipsov" type="Control" parent="Menu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1
current_tab = 1

[node name="Video" type="TabBar" parent="Settings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/TabContainer/Video"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer/TabContainer/Video/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ddddddddddd"

[node name="Audio" type="TabBar" parent="Settings/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer"]
layout_mode = 2

[node name="SFX Volume" type="Label" parent="Settings/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="Settings/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/MarginContainer/VBoxContainer/TabContainer/Audio/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Gameplay" type="TabBar" parent="Settings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Controls" type="TabBar" parent="Settings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Ok" type="Button" parent="Settings/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="Settings/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[connection signal="pressed" from="Menu/MarginContainer/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
